HDIV CHANGELOG
==============
http://www.hdiv.org

Release 2.1.11
==================================

 * Fix issue in longLiving request validation.

Release 2.1.10
==================================

 * Take into account <hdiv:validationRule> tag order looking for a matching url.
 * New 'parameters' attribute in <hdiv:validationRule> tag. Contains a list or unique regular expression that defines the parameters for which editable validation is applied (https://github.com/hdiv/hdiv/issues/66).
 * F5 key support. Reloading the same page never expire session states (https://github.com/hdiv/hdiv/issues/67).
 * Fix @Validation and grouping issue (https://github.com/hdiv/hdiv/issues/70).
 * In case of detecting an attack in editable data validation, add validation name to the log.
 * New 'ServletContextInitializer' and 'SessionInitializer' interfaces for ServletContext and HttpSession initialization. 

Release 2.1.9
==================================

 * Minor error fixes.

Release 2.1.8
==================================

 * Fix multipart issue in Struts1 (https://github.com/hdiv/hdiv/issues/59).
 * Fix multipart issue in Spring MVC (https://github.com/hdiv/hdiv/issues/62).
 * Support Servlet3 standard multipart processing in Spring MVC.
 
Release 2.1.7
==================================

 * Memory and performance optimizations.
 * New 'hdiv-thymeleaf' module for Thymeleaf template engine support.
 * Create default error page content if no errorPage is configured.
 * @Configuration support for JavaConfig as an alternative to XML.
 * Spring >= 4.0.0 is required to use JavaConfig and @EnableHdivWebSecurity feature
 * Ability to include an inner RequestDataValueProcessor to HdivRequestDataValueProcessor.
 * Spring Security CSRF token integration. Both, HDIV and Spring Security tokens are created.
 * New 'reuseExistingPageInAjaxRequest' configuration option. If it is activated, Ajax requests don't create a new page and reuse the existing one.
 * Move CipherTag to hdiv-core.